styled fourth button and used display flex to align divs correctly

--- a/style.css
+++ b/style.css
@@ -186,3 +186,26 @@
     height: 70vh;
     margin-top: 50px;
 }
+.fourthmaintext{
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+.title-4{
+    font-size: 60px;
+}
+
+
+
+.fourthbutton{
+    width: 300px;
+    border-radius: 6px;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+    font-size: 16px;
+    background-color: rgb(47, 114, 214);
+    color: white;
+    font-size: 16px;
+    height: 60px;
+}
